--- a/src/components/Flyout/styles.module.css
+++ b/src/components/Flyout/styles.module.css
@@ -1,4 +1,4 @@
-.flyout {
+.flyout:is(.flyout) {
     min-width: 0;
     position-try-options: flip-block;
     position-try-fallbacks: flip-block;
